# ln-os

./: .gitignore  README.md  README.ucore.md
doc/source/: android.md  conf.py  index.rst  linux.md  os-course.md  rcore.md  rtos-freertos.md  rtos-rt-thread.md  ucore.md
doc/source/lnos/: bare-bones.md  debug.md  environment.md  index.rst  interrupts.md  memory.md  minimal-kernel.md  multi-task.md
lnbrk/: README.linux.md
lnos/: LICENSE  README.md
lnos/kernel/: .gitignore  Cargo.toml  Makefile
lnos/kernel/.cargo/: config.toml
lnos/kernel/src/: allocator.rs  console.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  test.rs  vga_buffer.rs
lnos/kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
lnos/kernel/src/arch/x86_64/: allocator.rs  gdt.rs  idt.rs  io.rs  memory.rs  mod.rs  panic.rs  pic.rs
lnos/kernel/src/arch/x86_64/driver/: acpi.rs  mod.rs  serial.rs  vga.rs
lnos/kernel/src/cotask/: executor.rs  mod.rs  task.rs
lnos/kernel/src/driver/: keyboard.rs  mod.rs
lnos/kernel/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
lnos/kernel/target_arch/: x86_64.json
lnos/kernel/tests/: basic_boot.rs  should_panic.rs
os/: .gitignore  README.md  README.ucore.md
os/ucore/: Makefile
os/ucore/boot/: bootmain.c
os/ucore/mboot/: multiboot.c  multiboot.h
os/ucore/tools/: gdbinit
rcore/: README.md
rcore/kernel/: .gitignore  Cargo.toml  x86_64.json
rcore/kernel/.cargo/: config.toml
rcore/kernel/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
rcore/kernel/tests/: basic_boot.rs  should_panic.rs
rtos/: README.freertos.md  README.md  README.rt-thread.md  README.rt.md
ucore/: Makefile
ucore/boot/: bootasm.S
