[package]
name = "lnos"
version = "0.2.0"
authors = ["yehuohan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.12.2"


# 效果等同于 target_arch.json的"panic-strategy":"abort"
# 表示发生panic时禁止栈展开(stack unwinding)
#[profile.dev]
#panic = "abort"
#[profile.release]
#panic = "abort"
