[package]
name = "lnos"
version = "0.2.0"
authors = ["yehuohan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
volatile = "0.2.6"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
x86_64 = "0.12.2"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"

[package.metadata.bootimage]
# 设置测试时qemu的参数
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
    ]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # seconds


# 效果等同于 target_arch.json的"panic-strategy":"abort"
# 表示发生panic时禁止栈展开(stack unwinding)
#[profile.dev]
#panic = "abort"
#[profile.release]
#panic = "abort"
